[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/objects/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/objects/Zombie.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/zombieSpawn.gd" type="Script" id=3]
[ext_resource path="res://scripts/game.gd" type="Script" id=4]
[ext_resource path="res://scripts/bulletManager.gd" type="Script" id=5]
[ext_resource path="res://scenes/objects/bullet.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/source/grass.jpeg" type="Texture" id=7]
[ext_resource path="res://assets/source/dayNight.jpg" type="Texture" id=8]
[ext_resource path="res://scripts/skyPivot.gd" type="Script" id=9]
[ext_resource path="res://scripts/zombieManager.gd" type="Script" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 103 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 90 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 512, 10 )

[node name="game" type="Node2D"]
script = ExtResource( 4 )

[node name="env" type="Node2D" parent="."]

[node name="theLine" type="Area2D" parent="env"]
position = Vector2( 287, 514 )
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="env/theLine"]
rotation = 0.523599
shape = SubResource( 1 )

[node name="zombieSpawn" type="Area2D" parent="env"]
position = Vector2( 1034, 512 )
script = ExtResource( 3 )
zombie = ExtResource( 2 )

[node name="zombieArea" type="CollisionShape2D" parent="env/zombieSpawn"]
shape = SubResource( 2 )

[node name="spawnTime" type="Timer" parent="env/zombieSpawn"]

[node name="pathBorder" type="StaticBody2D" parent="env"]
position = Vector2( 512, 0 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="env/pathBorder"]
position = Vector2( 0, 420 )
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="env"]
position = Vector2( 516.2, 515.5 )
scale = Vector2( 2.9, 0.865 )
texture = ExtResource( 7 )

[node name="skyPivot" type="Node2D" parent="env"]
position = Vector2( 515, 435 )
scale = Vector2( 2.5, 2.5 )
script = ExtResource( 9 )

[node name="Sprite" type="Sprite" parent="env/skyPivot"]
z_index = -2
texture = ExtResource( 8 )

[node name="elements" type="Node2D" parent="."]

[node name="Player" parent="elements" instance=ExtResource( 1 )]
position = Vector2( 90, 534 )
collision_layer = 7
collision_mask = 7

[node name="bulletManager" type="Node2D" parent="elements"]
script = ExtResource( 5 )
bullet = ExtResource( 6 )

[node name="zombieManager" type="Node2D" parent="elements"]
script = ExtResource( 10 )

[node name="Zombie" parent="elements/zombieManager" instance=ExtResource( 2 )]
position = Vector2( 987, 558 )

[connection signal="raiseDiff" from="." to="env/zombieSpawn" method="_on_game_raiseDiff"]
[connection signal="unlockElement" from="." to="elements/Player" method="_on_game_unlockElement"]
[connection signal="lose" from="elements/Player" to="." method="_on_Player_lose"]
[connection signal="shoot" from="elements/Player" to="elements/bulletManager" method="_on_Player_shoot"]
[connection signal="death" from="elements/zombieManager" to="." method="_on_zombieManager_death"]
[connection signal="death" from="elements/zombieManager/Zombie" to="elements/zombieManager" method="_on_Zombie_death"]
